# AgenticProtocol

./: README.md  app.py  financial_agent.py  main.py  mcp_server.py  orchestrator.py  pyproject.toml  risk_agent.py  start.sh  stop.sh
agent_cards/: financial_card.json  orchestrator_card.json  risk_card.json
